# telegram-rss-rust

./: .gitignore  Cargo.toml  README.md  build.rs  rss.json  rss.yaml
.github/workflows/: rust.yml
src/: config.rs  db-cleaner.rs  main.rs
