[package]
name = "telegram-rss-rust"
version = "0.1.0"
edition = "2021"
default-run = "telegram-rss-rust"

[[bin]]
name = "telegram-rss-rust"
path = "src/main.rs"

[[bin]]
name = "db-cleaner"
path = "src/db-cleaner.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
teloxide = { version = "0.10", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["socks"] }
serde = "1.0"
serde_yaml = "0.9"
rss = "2.0"
redis = "0.22"
